[package]
name = "motorhead"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Prada <metal@getmetal.io>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
async-openai = "0.11.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
chrono = "0.4.24"
deadpool = "0.9.5"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
nanoid = "0.4.0"
redis = { version = "0.22", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
tiktoken-rs = "0.4.1"
tokio = { version = "1", features = ["full"] }
